feat(step2): Add implementation of post offers api (#2)
