# src/main/java/equinton/dev/kata_energy/domain/model/EnergyQuantity.java
@@ -1,0 +1,3 @@
+package equinton.dev.kata_energy.domain.model;
+
+public record EnergyQuantity(Integer value) {}
